@@ -51,7 +51,7 @@ static CairoDockDialog *systray_new_dialog()
   gtk_widget_size_request(GTK_WIDGET(systray.tray->box), &req);
   printf("Req: %s, %s\n", req.width, req.height);
   //gtk_widget_set_size_request(GTK_WINDOW(systray.dialog->pWidget), req.width, req.height);
-
+  gtk_window_resize(GTK_WINDOW(systray.dialog->pWidget), 24, 24);
   systray_dialog_apply_settings();
   return systray.dialog;
 }
