@@ -1,3 +1,7 @@
+2008-01-27  Cedric GESTES  <gestes_c@epita.fr>
+
+	* src/cairo-applet.c: bug fixed: the position of the window is lost if you call cairo-applet-unhide two time
+
 2008-01-24  Cedric GESTES  <gestes_c@epita.fr>
 
 	* src/terminal-menu-functions.c: added popup menu for tabs
